--- a/game/src/components/Help/Help.css
+++ b/game/src/components/Help/Help.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace');
+
 .fundo-help{
   width: 100vw;
   height: 100vh;
@@ -13,17 +15,19 @@
   max-width: 900px;
   height: fit-content;
   padding: 20px;
-  background-color: red;
+  background-color: rgb(0, 1, 46);
   border-radius: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 40px;
+  color: white;
 }
 
-/* .conteudo-help div:not(:last-child){
-  margin-right: 100px;
-} */
+.titleHelp{
+  color: rgb(2, 181, 226);
+  font-family: 'Kdam Thmor Pro', sans-serif;
+}
 
 .wd-help, .jv-help, .lo-help{
   text-align: justify;
