--- a/game/src/components/Home/Home.css
+++ b/game/src/components/Home/Home.css
@@ -22,11 +22,17 @@
 .wd{
   background-color: rgba(0, 0, 0, 0);
   top: 76px;
+  height: 110px;
+  left: 70px;
+  width: 215px;
 }
 
 .lightsOut{
   background-color: rgba(255, 255, 0, 0);
-  top: 494px;
+  top: 320px;
+  height: 110px;
+  width: 215px;
+  left: 340px;
 }
 
 .jv, .guarda_roupa{
@@ -36,12 +42,17 @@
 }
 
 .guarda_roupa{
-  top: 247px;
+  top: 320px;
+  height: 110px;
+  left: 70px;
+  width: 215px;
   background-color: rgba(0, 255, 255, 0);
 }
 
 .jv{
-  top: 247px;
-  left: 481px;
+  top: 75px;
+  left: 340px;
+  height: 110px;
+  width: 215px;
   background-color: rgba(165, 42, 42, 0);
 }
