--- a/game/src/components/WriteDeath/wd.css
+++ b/game/src/components/WriteDeath/wd.css
@@ -4,16 +4,8 @@
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  animation: animacaoFundo 1s alternate infinite linear;
-  background: url('https://i.imgur.com/kZdjzfb.jpg') no-repeat; 
+  background: url('https://i.redd.it/qmfjuz883g7z.png') no-repeat; 
   background-size: cover;
-}
-
-@keyframes animacaoFundo {
-  0%{background-blend-mode: darken;}
-  100%{background-blend-mode: darken;}
-  /* 75%{-moz-background-inline-policy: bounding-box;}
-  100%{background-repeat: 4;} */
 }
 
 .modalWDContainer {
@@ -45,7 +37,7 @@
   color: black;
   font-weight: light;
   background-color: whitesmoke;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 1, 46);
   padding: 10px;
   border-radius: 10px;
   transition: .4s;
@@ -55,7 +47,7 @@
 
 .modal-WD button:hover {
   color: #ffffff;
-  background-color: #000000;
+  background-color: rgb(0, 1, 46);
 }
 
 .gameOverWD {
